style.css
/*** MOBILE ***/

/* base styles */
body {
    font-size: 16px;
    font-family: 'Roboto', sans-serif;
    margin: 0;
}

header, footer {
    background-color: #1f2937;
    color: #f9faf8;
}

img {
    max-width: 100%;
    max-height: 100%;
    display: block;
}

.secondary-text {
    color: #e5e7eb;
    font-size: 18px;
}

.sign-up {
    padding: 8px 32px;
    border-radius: 8px;
    background-color: #3882f6;
    border: none;
    color:#f9faf8;
    font-weight: 500;
    font-family: 'Roboto', sans-serif;
}

/* header styles */
.header-container {
    margin: 0 20px;
    display: flex;
    flex-direction: column;
    padding-bottom: 20px;
}

#logo {
    font-size: 24px;
    font-weight: 700;
}

header nav {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

/* mobile header nav
add hamburger menu under header logo
flex-direction: column;
 */

header nav ul {
    list-style: none;
    display: flex;
    gap: 36px;
    margin: 0;
    padding: 0;
}

/* mobile header nav ul
flex-direction: column; */

header nav ul li a {
    color: #f9faf8;
    text-decoration: none;
}

header nav ul li a:hover {
    text-decoration: underline;
}

.hero-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin: 40px 0;
}

#hero-intro {
    margin-bottom: 20px;
}

#hero-intro p {
    margin: 10px 0 20px;
}

#hero-text {
    font-size: 48px;
    font-weight: 900;
    margin: 0;
}

#hero-image {
    text-align: center;
    height: 240px;
    display: flex;
}

#hero-image p {
    margin: 0;
    display: none;
}

/* random info */
.random-info-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 20px;
}

#random-info-section h2 {
    font-size: 36px;
    font-weight: 900;
    text-align: center;
    color: #1f2937;
    margin: 40px 0;
}

#figure-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.figure {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 160px;
    margin-bottom: 20px;
}

.square-img {
    height: 160px;
    width: 160px;
    border: solid 4px #3882f6;
    border-radius: 16px;
}

.img-caption {
    width: 90%;
    text-align: center;
    color: #1f2937;
}

/* quote */
#quote-section {
    background-color: #e5e7eb;
    display: flex;
    justify-content: center;
    align-items: center;
}
.quote-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 60px 20px;
    color:#1f2937;
}
#quote {
    font-size: 32px;
    font-weight: 300;
    font-style: italic;
    margin: 0 0 20px 0;
}

#thor {
    text-align: right;
    font-weight: 600;
    font-size: 20px;
    width: 90%;
    margin: 0;
}

/* call to action */
#action-section {
    padding: 40px;
}

.action-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

#action-content {
    background-color: #3882f6;
    color:#f9faf8;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    padding: 20px;
    box-sizing: border-box;
}

#action-text h3 {
    font-size: 24px;
    font-weight: 600;
    margin: 0 0 10px 0;
}

#action-text p {
    margin: 0 0 20px 0;
    color:#e5e7eb;
}

#action-sign-up {
    border: solid 2px #f9faf8;
}

/* footer */
footer {
    padding: 20px;
    text-align: center;
}

/*** TABLET ***/
@media only screen and (min-width: 768px) {
    header nav {
        flex-direction: row;
    } 
    
    .hero-container {
        flex-direction: row;
    }

    #hero-intro {
    width: 45%;
    }

    #hero-image {
        justify-content: flex-end;
        width: 50%;
    }

    .random-info-container {
        padding-bottom: 40px;
    }
    
    #random-info-section h2 {
        text-align: left;
    }
    
    #figure-container {
        width: 60%;
        flex-flow: row wrap;
        gap: 20px;
    }

    .figure {
        margin-bottom: 0;
    }
    
    .quote-container {
        padding: 60px;
    }

    #quote {
        margin: 0;
    }

    #action-section {
    padding: 80px;
    }

    #action-content {
        flex-direction: row;
        justify-content: space-between;
        width: 80%;
        padding: 50px 80px;
    }
    
    #action-text h3, #action-text p {
        margin: 0
    }
}

/*** DESKTOP ***/
@media only screen and (min-width: 1200px) {
    .header-container {
        margin: 0 200px;
    } 

    .hero-container {
        margin: 100px 0;
    }

    .random-info-container {
        padding-bottom: 100px;
    }

    #figure-container {
        flex-wrap: nowrap;
    }

    .quote-container {
        width: 790px;
        }
}

